# img2term

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt  main.cpp  register.cxx  register_color.cxx  register_combined.cxx  register_grayscale.cxx
app/include/img2term/app/: register.hxx  typedefs.hxx
cmake_extensions/: AddGoogleTest.cmake  FindGTEST.cmake  FindVIGRA.cmake
include/img2term/: img2term.hxx  img2term_colors.hxx  line.hxx  modifier.hxx  options.hxx  options_from_parse.hxx
include/img2term/average/: averager_base.hxx  averager_mean.hxx
include/img2term/averaging/: averagingbase.hxx  averagingfunctor.hxx  averagingmean.hxx
include/img2term/color/: color_base.hxx  color_gray_scale.hxx  color_rgb.hxx  distance.hxx  distance_l2_squared.hxx
include/img2term/line/: line_factory.hxx
include/img2term/matching/: matching_base.hxx  matching_color.hxx  matching_gray_scale.hxx  matching_grayscale.hxx  matchingbase.hxx  matchingfunctor.hxx  matchinggrayscale.hxx  matchingrgbwithstate.hxx
include/img2term/modifier/: modifier_base.hxx  modifier_color.hxx  modifier_constant.hxx  modifier_constant_pre_post.hxx  modifier_increment.hxx  modifier_rgb.hxx
include/img2term/transformer/: transformer_base.hxx  transformer_parallel.hxx
src/: img2term_colors.cxx
src/lib/: averager_mean.cxx  color_base.cxx  color_gray_scale.cxx  color_rgb.cxx  distance_l2_squared.cxx  img2term.cxx  line.cxx  line_factory.cxx  matching_color.cxx  matching_gray_scale.cxx  matching_grayscale.cxx  modifier.cxx  modifier_base.cxx  modifier_color.cxx  modifier_constant.cxx  modifier_increment.cxx  modifier_rgb.cxx  options_from_parse.cxx  transformer_parallel.cxx
src/python/: CMakeLists.txt  export_img2term.cxx  export_options.cxx  pyimg2term.cxx
test/: CMakeLists.txt  averager_mean_test.cxx  color_gray_scale_test.cxx  color_rgb_test.cxx  modifier_base_test.cxx  modifier_test.cxx  test_main.cxx  transformer_parallel_test.cxx
