CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

SET(CMAKE_CXX_FLAGS "-Wall -Wextra -Wfatal-errors -std=c++14 -pedantic -pthread" CACHE STRING "CXX Flags for all builds")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -O0" CACHE STRING "CXX Flags debug specific")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -Werror -DNDEBUG" CACHE STRING "CXX Flags release specific")

PROJECT(img2term)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include/")

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_extensions/)

FIND_PACKAGE(VIGRA REQUIRED)
IF(VIGRA_FOUND)
   MESSAGE("--   > vigra found!")
   INCLUDE_DIRECTORIES(${VIGRA_INCLUDE_DIR})
   LINK_DIRECTORIES( ${VIGRA_IMPEX_LIBRARY_DIR})
ENDIF()

# INSTALL(TARGETS img2term LIBRARY DESTINATION lib)
# INSTALL(TARGETS img2term_app RUNTIME DESTINATION bin)

# install(TARGETS img2term_refactor RUNTIME DESTINATION bin)

FILE(GLOB IMG2TERM_LIB_FILES src/*.cxx)
ADD_LIBRARY(img2term SHARED ${IMG2TERM_LIB_FILES})

set(BUILD_APP "1" CACHE BOOL "Build command line app.")
IF(BUILD_APP)
  ADD_SUBDIRECTORY( app )
ENDIF(BUILD_APP)