FIND_PACKAGE(Boost REQUIRED COMPONENTS python)
# find_package(Python REQUIRED VERSION 2.7)
FIND_PACKAGE(PythonLibs 2.7 REQUIRED)
if (PYTHONLIBS_FOUND)
  MESSAGE("--   > Python ${PYTHONLIBS_VERSION_STRING} found!")
  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
  LINK_DIRECTORIES(${PYTHON_LIBRARIES})
endif(PYTHONLIBS_FOUND)

FILE(GLOB PYTHON_LIB_CXX "*.cxx")
ADD_LIBRARY(pyimg2term SHARED ${PYTHON_LIB_CXX})
target_link_libraries(pyimg2term img2term ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})